# graphql-requests

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
graphql-client/: __init__.py  typedefs.py
graphql-client/client/: base.py
graphql_client/: __init__.py  errors.py  request.py  typedefs.py
graphql_client/client/: base.py  sync_client.py
graphql_requests/: __init__.py  errors.py  request.py  utils.py
graphql_requests/client/: __init__.py  async_client.py  base.py  sync_client.py
