[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "graphql_requests"
dist-name = "graphql-requests"
author = "Prokhorenko Pavel"
author-email = "prohorenkopavel74@gmail.com"
home-page = "https://github.com/pavelprokhorenko/graphql-client"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

description-file = "README.md"
requires-python = ">= 3.7"
requires = [
    "requests>=2,<3"
]

[tool.flit.metadata.requires-extra]
async = [
    "aiohttp[speedup]>=3,<4"
]

[tool.isort]
profile = "black"
